[build-system]
requires = ["setuptools>=69.0.3", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alnassrscoutingsaudi"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit==1.29.0",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "openpyxl==3.1.2",
    "Pillow==10.2.0",
    "plotly==5.18.0",
    "beautifulsoup4==4.12.3",
    "requests==2.31.0",
    "urllib3==2.1.0",
]
